commit tree 243e4d2b9f5fdb542e18858606df590edba0080b

--- a/index.html
+++ b/index.html
@@ -7,6 +7,15 @@
     <title>HTML Images</title>
   </head>
   <body>
-    <!-- Your code here -->
+    <img src="./assets/images/idiot lol.jpg"/>
+    <img 
+      src="/assets/images/safe lol.jpg" 
+      alt="Safe Ej... Ahem!"
+    />
+    <img 
+      src="./assets/images/page 2 lol.jpg" 
+      alt="Fi di eediats!" 
+      title="Just Kidding, lol. But that's why we earn a lot!"
+    />
   </body>
 </html>
